# flutter_native_demo

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/: Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_native_demo.podspec
ios/Classes/: FlutterNativeDemoPlugin.h  FlutterNativeDemoPlugin.m  SwiftFlutterNativeDemoPlugin.swift
lib/: flutter_native_demo.dart
libs/native_add/: CMakeLists.txt  native_add.cpp
linux/: CMakeLists.txt  flutter_native_demo_plugin.cc
linux/include/flutter_native_demo/: flutter_native_demo_plugin.h
macos/: flutter_native_demo.podspec
macos/Classes/: FlutterNativeDemoPlugin.swift  native_add.cpp
test/: flutter_native_demo_test.dart
windows/: CMakeLists.txt  flutter_native_demo_plugin.cpp
windows/include/flutter_native_demo/: flutter_native_demo_plugin.h
(+4 files in other folders)
